# rcoc

./: .gitignore  Cargo.toml  README.md  index.html  test.rcoc  test.roo  test.v
.github/workflows/: rust.yml
rcoc/: Cargo.toml  test.v
rcoc/src/: ast.rs  diagnostics.rs  extensions.rs  kernel.rs  main.rs  parser.rs
rooster/: Cargo.toml
rooster/src/: ast.rs  diagnostics.rs  extensions.rs  kernel.rs  main.rs  parser.rs
rooster_afl/: Cargo.toml
rooster_afl/src/: main.rs
rooster_kernel/: Cargo.toml
rooster_kernel/fuzz/: Cargo.toml
rooster_kernel/fuzz/fuzz_targets/: default.rs
rooster_kernel/src/: lib.rs
rooster_kernel/tests/: inductive_tests.rs  logic_tests.rs
rooster_kernel/tests/common/: mod.rs
