[workspace]
members = ["rooster", "rooster_afl", "rooster_kernel"]
default-members = ["rooster", "rooster_kernel"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
strip = true
