[package]
name = "rooster"
version = "0.1.0"
authors = ["Aritz Erkiaga Fernández"]
edition = "2021"
description = "An automated proof checker based on the Calculus of Constructions"
repository = "https://github.com/aerkiaga/rooster/"
license = "GPL-3.0-only"
keywords = ["proof", "language", "security", "mathematics", "interpreter"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rooster_kernel = { path = "../rooster_kernel" }
ariadne = "0.1.5"
chumsky = "0.9.0"
