[package]
name = "rooster_kernel"
version = "0.1.0"
authors = ["Aritz Erkiaga Fernández"]
edition = "2021"
description = "Rooster's proof kernel"
repository = "https://github.com/aerkiaga/rooster/"
license = "GPL-3.0-only"
keywords = ["proof", "language", "security", "mathematics", "interpreter"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
